--- a/index.qmd
+++ b/index.qmd
@@ -22,7 +22,7 @@ I wrote/compiled this book as a way to introduce people to univariate and bivari
 
 I wrote/compiled this book as a way to introduce people to the field of intelligence research and its criticisms. I have always been interested in the field of intelligence research, and I wanted to share my knowledge with others. I also wanted to make a book that was easy but robustly cited.
 
-### [Some Brief Counters to Heritability](https://ajaverett.github.io/heritability)
+### [Some Brief Counters around Heritability](https://ajaverett.github.io/heritability)
 
 I compiled this book as a way to counter some common claims against the idea of heritability (ratio of variance explained by genetics to total variation in a given phenotype). Understanding to two fronts to improving a phenotype (genetics and environment) is important to me.
 
