--- a/docs/resume.qmd
+++ b/docs/resume.qmd
@@ -22,7 +22,7 @@ format:
 ---
 <!-- TITLE -->
 \begin{center}
-{\fontsize{42}{60}\selectfont \textbf{Alan J Averett}}
+{\fontsize{40}{60}\selectfont \textbf{Alan J Averett}}
 \end{center}
 
 <!-- CONTACT INFO -->
@@ -41,8 +41,8 @@ format:
   \end{multicols}
   \vspace{-0.17cm}
   \begin{multicols}{2}
-    \begin{flushleft}B.Sc. Data Science; Minor in Statistics\end{flushleft}
-    \begin{flushright}Apr 2020- Apr 2024\end{flushright}
+    \begin{flushleft}B.Sc. Data Science, Statistics; \textit{Major GPA: 3.9} \end{flushleft}
+    \begin{flushright}Apr 2020 - Apr 2024\end{flushright}
   \end{multicols}
   \vspace{-0.25cm}
   \textit{Certifications: Web and Computer Programming; Machine Learning}
@@ -53,46 +53,10 @@ format:
 
 \vspace{7pt}
 
-<!-- EXPERIENCE : 2ND BULLET -->
+<!-- EXPERIENCE : 1ST BULLET-->
 \begin{large}{\bf EXPERIENCE}
 \vspace{3pt}
 \hrule
-  \begin{multicols}{2}
-    \begin{flushleft}{\bf \href{https://byuidatascience.github.io/lab/}{Mathematics Department BYU-Idaho}}\end{flushleft}
-    \begin{flushright}Rexburg, ID\end{flushright}
-  \end{multicols}
-  \vspace{-0.17cm}
-  \begin{multicols}{2}
-    \begin{flushleft}\textit{Head Lab Coordinator}\end
-    {flushleft}\begin{flushright}May 2022-Present\end
-    {flushright}
-  \end{multicols}
-\end{large}
-\vspace{-0.16cm}
-* Managed, scheduled, and trained tutors to work in the Data Science Lab
-* Tutored students seeking help in programming and mathematics for all intermediate level data science courses using various data science and machine learning libraries within Python including Pandas, Numpy, Sklearn, and TensorFlow
-
-\vspace{6pt}
-
-\begin{large}
-  \vspace{-0.17cm}
-  \begin{multicols}{2}
-    \begin{flushleft}\textit{Teacher's Assistant}\end
-    {flushleft}\begin{flushright}Apr 2022- Present\end
-    {flushright}
-  \end{multicols}
-\end{large}
-\vspace{-0.16cm}
-* **DS250**: Taught DS Programming, viz, and basic ML with Pandas, NumPy, Sci-kit Learn
-* **DS350**: Taught Data Wrangling and Visualization with R tidyverse (dplyr, ggplot2 etc.)
-* **MATH341**: Taught Linear Algebra with Python (NumPy, SymPy)
-* **MATH221**: Taught Business Statistics with Excel
-
-\vspace{7pt}
-
-
-<!-- EXPERIENCE : 1ST BULLET-->
-\begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf \href{https://wpaintel.com/about/}{WPA Intelligence}}\end{flushleft}
     \begin{flushright}Washington D.C.\end{flushright}
@@ -100,8 +64,8 @@ format:
   \vspace{-0.17cm}
   \begin{multicols}{2}
     \begin{flushleft}\textit{Machine Learning Intern}\end{flushleft}
-    \begin{flushright}Jul 2022- Nov 2022\end{flushright}\end
-  {multicols}
+    \begin{flushright}Jul 2022 - Nov 2022\end{flushright}
+  \end{multicols}
 \end{large}
 \vspace{-0.16cm}
 * Created digestible reports for 80+ political campaigns by analyzing/visualizing voter data trends with machine learning models that predicted ideological disposition and turnout
@@ -110,76 +74,95 @@ format:
 
 \vspace{7pt}
 
-<!-- EXPERIENCE : 3RD BULLET -->
+<!-- EXPERIENCE : 2ND BULLET -->
 \begin{large}
   \begin{multicols}{2}
-    \begin{flushleft}{\bf \href{https://lspoly.com/}{Lone Star Polypac, Inc}}\end{flushleft}
-    \begin{flushright}Wimberly, TX\end{flushright}
-  \end{multicols}
-  \vspace{-0.17cm}
-  \begin{multicols}{2}
-    \begin{flushleft}\textit{Technical Aide}\end
-    {flushleft}\begin{flushright}Jun 2021 - Apr 2022\end
-    {flushright}
-  \end{multicols}
-\end{large}
-\vspace{-0.16cm}
-* Managed and contributed website content in order to aesthetically and efficiently relay information to potential customers
-* Handled technical requests from management including creating and formatting documents for administrative use
-
-\vspace{7pt}    
-
-<!-- VOLUNTEER : 1ST BULLET-->
-\begin{large}{\bf VOLUNTEER}
-  \vspace{3pt}
-  \hrule
-  \begin{multicols}{2}
-    \begin{flushleft}{\bf \href{https://www.byui.edu/mathematics/student-resources/data-science/data-science-society}{Data Science Society BYU-Idaho }}\end{flushleft}
+    \begin{flushleft}{\bf \href{https://byuidatascience.github.io/lab/}{Mathematics Department BYU-Idaho}}\end{flushleft}
     \begin{flushright}Rexburg, ID\end{flushright}
   \end{multicols}
   \vspace{-0.17cm}
   \begin{multicols}{2}
-    \begin{flushleft}\textit{President}\end{flushleft}
-    \begin{flushright}Mar 2023- Present\end{flushright}\end
-  {multicols}
+    \begin{flushleft}\textit{Head Lab Coordinator}\end{flushleft}
+    \begin{flushright}May 2023 - Jan 2023\end{flushright}
+  \end{multicols}
 \end{large}
 \vspace{-0.16cm}
-* Organized six consulting groups of 3-5 students to work with local businesses to help them solve data science problems.
-* Oversaw and helped coordinate all projects undertaken by the society with the faculty sponsor
+* Managed, scheduled, and trained tutors to work in the university data science lab for R and Python
+* Tutored students seeking help in programming and mathematics for all intermediate level data science courses using various data science and machine learning libraries within Python including Pandas, Numpy, Sklearn, and TensorFlow
 
 \vspace{6pt}
 
 \begin{large}
   \vspace{-0.17cm}
   \begin{multicols}{2}
-    \begin{flushleft}\textit{Data Science Project Manager - Onsemi}\end
-    {flushleft}\begin{flushright}Jan 2023 - Mar 2023\end
-    {flushright}
+    \begin{flushleft}\textit{Teacher's Assistant}\end{flushleft}
+    \begin{flushright}Apr 2022 - Present\end{flushright}
   \end{multicols}
 \end{large}
 \vspace{-0.16cm}
-* Collaborated with Onsemi to produce an automated system for news reports
-* Enhanced project productivity by delegating tasks in coordination with team member skills
+* **DS250**: Taught and tutored DS Programming, viz, and basic ML in Python (Pandas, NumPy, Sci-kit Learn)
+* **DS350**: Taught and tutored Data Wrangling and viz with R tidyverse (dplyr, ggplot2 etc.)
+* **DS460**: Taught and tutored Big Data Programming with Python in DataBricks (Polars, PySpark, Plotly, AutoML, etc.)
+* **MATH221**: Taught and tutored Business Statistics and other statistical theories and methods with Excel
+* **MATH341**: Taught and tutored Linear Algebra with Python (NumPy, SymPy)
+\vspace{7pt}
+
+\begin{large}
+  \vspace{-0.17cm}
+  \begin{multicols}{2}
+    \begin{flushleft}\textit{Data Science Society President}\end{flushleft}
+    \begin{flushright}Mar 2023 - Sep 2023\end{flushright}
+  \end{multicols}
+\end{large}
+* Oversaw and helped coordinate all projects undertaken by the society with the faculty sponsor.
+* Lead and coordinated DSS activities and meetings; mentored and supported project teams including weekly bootcamps to teach data analysis, statistics, and machine learning
 
 \vspace{7pt}
 
-<!-- EXPERIENCE : 2ND BULLET -->
-\begin{large}
+
+
+
+
+\begin{large}{\bf PROJECTS}
+\hrule
   \begin{multicols}{2}
-    \begin{flushleft}{\bf \href{https://mbmsubmissions.blogspot.com/2019/10/}{Maryland Baltimore Mission}}\end{flushleft}
-    \begin{flushright}Baltimore, MD\end{flushright}
+    \begin{flushleft}{\bf \href{https://wilfordwoodruffpapers.org/}{Wilford Woodruff Papers}}\end{flushleft}
+    \begin{flushright}Rexburg, ID\end{flushright}
   \end{multicols}
   \vspace{-0.17cm}
   \begin{multicols}{2}
-    \begin{flushleft}\textit{Technology Consultant and Service Organizer}\end
-    {flushleft}\begin{flushright}Mar 2019 - Feb 2020\end
+    \begin{flushleft}\textit{Data Scientist}\end
+    {flushleft}\begin{flushright}May 2023 - Present\end
     {flushright}
   \end{multicols}
 \end{large}
 \vspace{-0.16cm}
-* Organized religious community service among teams as a regional director and technology consultant
-* Communicated and served with local multilingual institutions
-\vspace{6pt}
+* Provided actionable graphs and trends using NLP tools like sentiment analysis and unsupervised textual clustering along side time-series analysis as part of the Wilford Woodruff production team
+* Delivered an interactive web application that cross-referenced religious texts with early Mormon journal entries by using a Bag-of-Words to vectorize n-grams to find textual matches sorted by confidence
+
+\vspace{7pt}
+
+\begin{large}
+  \begin{multicols}{2}
+    \begin{flushleft}{\bf \href{https://www.familysearch.org/help/oral-history/getting-started}{FamilySearch}}\end{flushleft}
+    \begin{flushright}Rexburg, ID\end{flushright}
+  \end{multicols}
+  \vspace{-0.17cm}
+  \begin{multicols}{2}
+    \begin{flushleft}\textit{Statistician}\end
+    {flushleft}\begin{flushright}Sep 2023 - Present\end
+    {flushright}
+  \end{multicols}
+\end{large}
+\vspace{-0.16cm}
+
+* Identified fraudulent genealogical submissions in the African Oral History Project for FamilySearch using in-house tuned statistical models, anomaly detection methods, and machine learning algorithms.
+
+\vspace{7pt}
+
+
+
+
 
 
 <!-- SKILLS -->
