--- a/docs/resume.qmd
+++ b/docs/resume.qmd
@@ -41,11 +41,11 @@ format:
   \end{multicols}
   \vspace{-0.17cm}
   \begin{multicols}{2}
-    \begin{flushleft}B.Sc. Data Science, Statistics; \textit{Major GPA: 3.9} \end{flushleft}
+    \begin{flushleft}B.Sc. Data Science, Statistics; \textit{Major GPA: 3.8} \end{flushleft}
     \begin{flushright}Apr 2020 - Apr 2024\end{flushright}
   \end{multicols}
   \vspace{-0.25cm}
-  \textit{Certifications: Web and Computer Programming; Machine Learning}
+  \textit{Certifications: Web and Computer Programming (3.7); Machine Learning (4.0)}
 \end{large}
 
 \vspace{0.2cm}
