--- a/index.qmd
+++ b/index.qmd
@@ -14,6 +14,9 @@ about:
     - text: Resume
       icon: file-text
       href: "resume.pdf"
+    - text: Instagram
+      icon: instagram
+      href: "https://www.instagram.com/rooftop_asian"
     - text: Email
       icon: envelope
       href: mailto:ajaverett0@Gmail.com
@@ -28,37 +31,45 @@ listing:
 
 <!-- HERO SECTION -->
 ::: {.column-screen}
-![](images/bg_hero.png){style="transform: translateY(-5em); height: 10% !important;"}
+![](images/bg_hero2.png){style="transform: translateY(-5em); 
+                                           height: 10% !important;
+                                           display: none !important;"}
 :::
 
+::: {.column-screen}
 
-<!-- ME SECTION -->
-:::: columns
+```{=html}
+<div style="background-image: url('images/bg_hero2.png'); 
+            background-size: cover; 
+            height: 100vh; 
+            width: 100%; 
+            display: flex; 
+            flex-direction: column; 
+            align-items: center; 
+            justify-content: center;
+            padding: 10px;
+            transform: translateY(-5em)">
+    
+    <!-- Content over the hero image -->
+    <h1 style="color: white; text-align: center;">Meet Alan!</h1>
+    
+    <!-- Portrait Image -->
+    <img src="images/portrait.png" alt="Portrait of Aj" style="width: 150px; height: auto; border-radius: 50%; margin-bottom: 20px; box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.8);">
+    
+    <h2 style="color: white; text-align: center;">Data Scientist</h2>
+    <p style="color: white; text-align: center; max-width: 600px;">
+      I'm a data scientist committed to driving impactful results through data, whether in the academic, political, or historical domain. I have a passion for Python, R, data visualization, and statistics/machine learning. 
+    </p>
+    
+    <a href="resume.pdf" target="_blank" style="background-color: #007BFF; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-weight: bold; box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.4);">View My Resume</a>
 
-<!-- COL1 -->
-::: {.column width="70%"}
+    
+</div>
 
-# Meet Aj!
-
-### Data Scientist
-
-I'm a data scientist with a passion for Python, R, data visualization, and statistics/machine learning. 
-
+```
 :::
 
-<!-- COL 2 (SPACE) -->
-::: {.column width="10%"}
-
-:::
-
-<!-- COL 3 -->
-::: {.column width="20%"}
-
-<br> ![](images/portrait.png){width="130%"}
-
-:::
-
-::::
+# Some of Alan's Projects
 
 On this portfolio, I share and teach what I learn. To get started, you can check out my most popular content below. You can find me on GitHub, Instagram, and LinkedIn. Feel free to reach out to me via mail and subscribe to my email newsletter.
 
